test/force-app/main/default/objects/Co_Developer_Application__c/Co_Developer_Application__c.object-meta.xml
<CustomObject>
    <description>Object that houses all developer applications created via the portal</description>
    <label>Developer Application</label>
    <nameField>
        <displayFormat>CDA-{0000}</displayFormat>
        <label>Co-Developer Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developer Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>