test/force-app/main/default/objects/Co_Developer_Application__c/fields/Amount_of_Projects_Built_in_Last_5_Years__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Projects_Built_in_Last_5_Years__c</fullName>
    <description>for portal use</description>
    <inlineHelpText>How many projects have you successfully developed and/or built in the last five years?</inlineHelpText>
    <label>Amount of Projects Built in Last 5 Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>