test/force-app/main/default/objects/Co_Developer_Application__c/fields/Annual_Development_Pipeline_in_MWs__c.field-meta.xml
<CustomField>
    <fullName>Annual_Development_Pipeline_in_MWs__c</fullName>
    <inlineHelpText>What does your annual development pipeline look like in terms of late-stage development projects, in MWs?</inlineHelpText>
    <label>Annual Development Pipeline - in MWs</label>
    <type>TextArea</type>
</CustomField>