test/force-app/main/default/objects/Co_Developer_Application__c/fields/Annual_Development_Pipeline_of_deals__c.field-meta.xml
<CustomField>
    <fullName>Annual_Development_Pipeline_of_deals__c</fullName>
    <inlineHelpText>What does your annual development pipeline look like in terms of late-stage development projects, in # of deals?</inlineHelpText>
    <label>Annual Development Pipeline - # of deals</label>
    <type>TextArea</type>
</CustomField>