test/force-app/main/default/objects/Co_Developer_Application__c/fields/Application_Approved_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved_Email_Sent__c</fullName>
    <description>automatically filled in by automation</description>
    <label>Application Approved Email Sent</label>
    <type>Date</type>
</CustomField>