test/force-app/main/default/objects/Co_Developer_Application__c/fields/BESS_Projects_Developed__c.field-meta.xml
<CustomField>
    <fullName>BESS_Projects_Developed__c</fullName>
    <inlineHelpText>How many BESS projects (and the average MWh per project) have you developed in the past two years?</inlineHelpText>
    <label>BESS Projects Developed</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>