test/force-app/main/default/objects/Co_Developer_Application__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <description>for portal use</description>
    <label>Company City</label>
    <type>TextArea</type>
</CustomField>