test/force-app/main/default/objects/Co_Developer_Application__c/fields/Company_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Postal_Code__c</fullName>
    <label>Company Postal Code</label>
    <type>TextArea</type>
</CustomField>