test/force-app/main/default/objects/Co_Developer_Application__c/fields/Company_s_Leading_Strength__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Leading_Strength__c</fullName>
    <description>What would you describe as your company’s leading strength?</description>
    <label>Company&apos;s Leading Strength</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>