test/force-app/main/default/objects/Co_Developer_Application__c/fields/Company_Services__c.field-meta.xml
<CustomField>
    <fullName>Company_Services__c</fullName>
    <label>Company Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Origination</fullName>
            </value>
            <value>
                <fullName>Project Development</fullName>
            </value>
            <value>
                <fullName>Project Design &amp; Layout</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>Engineering/Procurement</fullName>
            </value>
            <value>
                <fullName>Engineering, Procurement</fullName>
                <isActive>false</isActive>
                <label>Engineering, Procurement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>