test/force-app/main/default/objects/Co_Developer_Application__c/fields/Company_State__c.field-meta.xml
<CustomField>
    <fullName>Company_State__c</fullName>
    <label>Company State</label>
    <type>TextArea</type>
</CustomField>