test/force-app/main/default/objects/Co_Developer_Application__c/fields/Company_Street__c.field-meta.xml
<CustomField>
    <fullName>Company_Street__c</fullName>
    <description>for portal use</description>
    <label>Company Street</label>
    <type>TextArea</type>
</CustomField>