test/force-app/main/default/objects/Co_Developer_Application__c/fields/Credit_Profiles_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Credit_Profiles_of_Customers__c</fullName>
    <description>for portal use</description>
    <inlineHelpText>What are the most common credit profiles of your customers? (Check all that apply)</inlineHelpText>
    <label>Credit Profiles of Customers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customers with a public credit rating from Moody’s</fullName>
            </value>
            <value>
                <fullName>S&amp;A and/or Fitch</fullName>
            </value>
            <value>
                <fullName>Customers with parent company guarantees</fullName>
            </value>
            <value>
                <fullName>Customers with audited financial statements made available to you</fullName>
            </value>
            <value>
                <fullName>Customers with unknown credit but strong business profiles</fullName>
            </value>
            <value>
                <fullName>Customers with unknown credit and less certain business profiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>