test/force-app/main/default/objects/Co_Developer_Application__c/fields/Customers_Investment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Customers_Investment_Grade__c</fullName>
    <label>Customers Investment Grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>