test/force-app/main/default/objects/Co_Developer_Application__c/fields/Describe_Sales_Project_Origination_Team__c.field-meta.xml
<CustomField>
    <fullName>Describe_Sales_Project_Origination_Team__c</fullName>
    <description>for portal use</description>
    <inlineHelpText>How would you describe your sales and project origination team?</inlineHelpText>
    <label>Describe Sales/Project Origination Team</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>