test/force-app/main/default/objects/Co_Developer_Application__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>for portal use</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>