test/force-app/main/default/objects/Co_Developer_Application__c/fields/Experience_w_Battery_Energy_Storage_Sys__c.field-meta.xml
<CustomField>
    <fullName>Experience_w_Battery_Energy_Storage_Sys__c</fullName>
    <inlineHelpText>Do you have experience with Battery Energy Storage Systems?</inlineHelpText>
    <label>Experience w Battery Energy Storage Sys</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>