test/force-app/main/default/objects/Co_Developer_Application__c/fields/How_are_Deals_Financially_Structured__c.field-meta.xml
<CustomField>
    <fullName>How_are_Deals_Financially_Structured__c</fullName>
    <description>for portal use</description>
    <inlineHelpText>How are most of your deals financially structured? (Check all that apply)</inlineHelpText>
    <label>How are Deals Financially Structured</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchased by the customer</fullName>
            </value>
            <value>
                <fullName>Project financed by your company</fullName>
            </value>
            <value>
                <fullName>Sold to and project financed by a third-party investor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>