test/force-app/main/default/objects/Co_Developer_Application__c/fields/Legal_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Company_Name__c</fullName>
    <description>The legal name of the company. Used in DocuSign documents.</description>
    <label>Legal Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>