test/force-app/main/default/objects/Co_Developer_Application__c/fields/Length_of_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Sales_Cycle__c</fullName>
    <description>for portal use</description>
    <inlineHelpText>How long is your typical sales cycle from first touch point to contract/PPA signed?</inlineHelpText>
    <label>Length of Sales Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-6 months</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>12-18 months</fullName>
            </value>
            <value>
                <fullName>18+ months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>