test/force-app/main/default/objects/Co_Developer_Application__c/fields/Partner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company_Name__c</fullName>
    <description>for portal use</description>
    <label>Partner Company Name</label>
    <type>TextArea</type>
</CustomField>