test/force-app/main/default/objects/Co_Developer_Application__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>for portal use</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>