test/force-app/main/default/objects/Co_Developer_Application__c/fields/Portal_Account__c.field-meta.xml
<CustomField>
    <fullName>Portal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Developer Applications</relationshipLabel>
    <relationshipName>Developer_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>