test/force-app/main/default/objects/Co_Developer_Application__c/fields/Primary_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Last_Name__c</fullName>
    <label>Primary Contact Last Name</label>
    <type>TextArea</type>
</CustomField>