test/force-app/main/default/objects/Co_Developer_Application__c/fields/Primary_Partner_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Contact_Name__c</fullName>
    <label>Primary Partner Contact Name</label>
    <type>TextArea</type>
</CustomField>