test/force-app/main/default/objects/Co_Developer_Application__c/fields/Project_Sizes_Pursued_by_Company__c.field-meta.xml
<CustomField>
    <fullName>Project_Sizes_Pursued_by_Company__c</fullName>
    <inlineHelpText>Which project sizes does your company pursue?</inlineHelpText>
    <label>Project Sizes Pursued by Company</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-250 kWdc</fullName>
            </value>
            <value>
                <fullName>250-500 kWdc</fullName>
            </value>
            <value>
                <fullName>500-1,000 kWdc</fullName>
            </value>
            <value>
                <fullName>1-5 MWdc</fullName>
            </value>
            <value>
                <fullName>5+ MWdc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>