test/force-app/main/default/objects/Co_Developer_Application__c/fields/Projects_Commonly_Developed_Built__c.field-meta.xml
<CustomField>
    <fullName>Projects_Commonly_Developed_Built__c</fullName>
    <description>for portal use</description>
    <inlineHelpText>Which types of projects do you most commonly develop and/or build? (Check all that apply)</inlineHelpText>
    <label>Projects Commonly Developed/Built</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Canopy/Carport</fullName>
            </value>
            <value>
                <fullName>Ground Mount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>