test/force-app/main/default/objects/Co_Developer_Application__c/fields/Regions_Actively_Pursing_Projects__c.field-meta.xml
<CustomField>
    <fullName>Regions_Actively_Pursing_Projects__c</fullName>
    <inlineHelpText>In which geographical regions is your company actively pursuing projects?</inlineHelpText>
    <label>Regions Actively Pursing Projects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northwest</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>Mountain West</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>New England</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>