test/force-app/main/default/objects/Co_Developer_Application__c/fields/Reminder_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Sent__c</fullName>
    <description>automatically filled in by automation</description>
    <label>Reminder Email Sent</label>
    <type>Date</type>
</CustomField>