test/force-app/main/default/objects/Co_Developer_Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>used for path to display on portal</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Created</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Application Approved</fullName>
            </value>
            <value>
                <fullName>Application Rejected</fullName>
            </value>
            <value>
                <fullName>Sign NDA</fullName>
            </value>
            <value>
                <fullName>Submit Application</fullName>
            </value>
            <value>
                <fullName>Sign Agreement</fullName>
            </value>
            <value>
                <fullName>Ready to Go!</fullName>
            </value>
            <value>
                <fullName>Application Review</fullName>
                <isActive>false</isActive>
                <label>Application Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>