test/force-app/main/default/objects/Co_Developer_Application__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>TEXT(Stage__c)</formula>
    <label>Test</label>
    <type>Text</type>
</CustomField>