test/force-app/main/default/objects/Co_Developer_Application__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>for portal use</description>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>