test/force-app/main/default/objects/Co_Developer_Application__c/fields/Types_of_Customers_Commonly_Worked_With__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Customers_Commonly_Worked_With__c</fullName>
    <description>for portal use</description>
    <inlineHelpText>What types of customers do you most commonly work with?</inlineHelpText>
    <label>Types of Customers Commonly Worked With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial &amp; Industrial Customers</fullName>
            </value>
            <value>
                <fullName>Municipalities</fullName>
            </value>
            <value>
                <fullName>Colleges &amp; Universities</fullName>
            </value>
            <value>
                <fullName>School Districts</fullName>
            </value>
            <value>
                <fullName>Hospitals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>