test/force-app/main/default/objects/Co_Developer_Application__c/fields/Years_Active_in_Solar_Industry__c.field-meta.xml
<CustomField>
    <fullName>Years_Active_in_Solar_Industry__c</fullName>
    <inlineHelpText>How long has your company been active in the solar industry?</inlineHelpText>
    <label>Years Active in Solar Industry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>