test/force-app/main/default/objects/Co_Developer_Application__c/recordTypes/Developer_Application.recordType-meta.xml
<RecordType>
    <fullName>Developer_Application</fullName>
    <active>true</active>
    <description>master once application has been started</description>
    <label>Developer Application</label>
</RecordType>