test/force-app/main/default/objects/Co_Developer_Application__c/recordTypes/Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Onboarding</fullName>
    <active>true</active>
    <description>before application is started</description>
    <label>Onboarding</label>
</RecordType>