test/force-app/main/default/objects/Co_Developer_Application__c/listViews/Developer_Basic_Info_Queue_Co_Developer_Application.listView-meta.xml
<ListView>
    <fullName>Developer_Basic_Info_Queue_Co_Developer_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Developer Basic Info Queue</label>
    <queue>Developer_Basic_Info_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>